fix horizontal scroll on 320px+

--- a/css/style.css
+++ b/css/style.css
@@ -847,7 +847,7 @@ a:focus {
   font-size: 36px;
   color: #fff;
   background-color: #006bb3;
-  padding: 5px;
+  padding: 5px 15px;
 }
 
 /* ---------------------------------------- */
@@ -1204,14 +1204,8 @@ a:focus {
   /* ---------------------------------------- */
   /* H E A D E R    S T Y L E                 */
   /* ---------------------------------------- */
-  .header__nav > .container {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
   .nav__center, .nav__right {
     text-align: center;
-    padding: 8px;
   }
   .nav__center .fa, .nav__right .fa {
     font-size: 36px;
@@ -1222,9 +1216,6 @@ a:focus {
   }
   .nav__phone--link {
     font-size: 12px;
-  }
-  .navbar__header {
-    padding: 0 30px;
   }
 
   /* ---------------------------------------- */
