--- a/sass/pages/_main.sass
+++ b/sass/pages/_main.sass
@@ -462,7 +462,7 @@ a:focus
         font-size: 36px
         color: #fff 
         background-color: #006bb3
-        padding: 5px
+        padding: 5px 15px
 +comment("work style")       
 .work 
   padding: 0
