--- a/sass/pages/_responsive.sass
+++ b/sass/pages/_responsive.sass
@@ -30,25 +30,17 @@
           p
             font-size: 14px
   +comment("header style") 
-  .header__nav
-    >.container
-      padding-left: 5px
-      padding-right: 5px
   .nav
     &__center,
     &__right
       text-align: center
-      padding: 8px
       .fa
         font-size: 36px
         line-height: 60px
     &__center
       float: right    
     &__phone--link
-      font-size: 12px
-    &bar
-      &__header
-        padding: 0 30px    
+      font-size: 12px  
   +comment("offer style") 
   .offer
     .tag
